@@ -475,12 +475,12 @@ Counts are more work and for this we use a C routine.
 # add it in
 newvar <- newdata[[argname[ii]]]  # prior value (for sequential tmerge calls)
 if (argclass[ii] %in% c("cumtdc", "cumevent")) {
-    if (!is.numeric(yinc)) stop("invalid increment for cumtdc or cumevent")
+    if (!is.numeric(yinc)) stop("invalid increment for cumtdcq or cumevent")
     yinc <- unlist(tapply(yinc, match(id, baseid), cumsum))
     }
 
 if (argclass[ii] %in% c("event", "cumevent")) {
-    #if (is.null(newvar)) {
+    if (is.null(newvar)) {
         if (is.numeric(yinc)) newvar <- rep(0L, nrow(newdata))
         else if (is.factor(yinc)) 
             newvar <- factor(rep(levels(yinc)[1], nrow(newdata)),
@@ -488,7 +488,7 @@ if (argclass[ii] %in% c("event", "cumevent")) {
         else if (is.character(yinc)) newvar <- rep('', nrow(newdata))
         else if (is.numeric(yinc)) newvar <- rep(0L, nrow(newdata))
         else stop("invalid value for a status variable")
-    #}
+    }
     keep <- (subtype==1 | subtype==3) # all other events are thrown away
     newvar[indx2[keep]] <- yinc[keep]
     
