@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2017-02-21 r72241) -- "Unsuffered Consequences"
+R Under development (unstable) (2017-06-20 r72822) -- "Unsuffered Consequences"
 Copyright (C) 2017 The R Foundation for Statistical Computing
-Platform: i686-pc-linux-gnu (32-bit)
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -43,6 +43,37 @@ Type 'q()' to quit R.
 +           factor(c(3,3,2,2,1,2,3,2,1,3,2), labels=c("d", "e", "new")))
 [1] TRUE
 > 
+> 
+> # Multiple chained calls.  
+> newcgd <- tmerge(data1=cgd0[, 1:13], data2=cgd0, id=id, tstop=futime)
+> newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime1)) 
+> newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime2)) 
+> newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime3)) 
+> newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime4)) 
+> newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime5)) 
+> newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime6)) 
+> newcgd <- tmerge(newcgd, cgd0, id=id, infect = event(etime7)) 
+> newcgd <- tmerge(newcgd, newcgd, id, enum=cumtdc(tstart))
+> all.equal(dim(newcgd), c(203,17))
+[1] TRUE
+> all.equal(as.vector(table(newcgd$infect)), c(127, 76))
+[1] TRUE
+> 
+> tcount <- attr(newcgd, "tcount")
+> all(tcount[,1:3] ==0)  # no early, late, or gap
+[1] TRUE
+> 
+> # table with number of subjects who have etime1 < futime (row 1)
+> #  and  etime1==futime (row 2)
+> # the table command ignores the missings
+> temp <- subset(cgd0, select=etime1:etime7)
+> counts <- sapply(temp, function(x) 
++     as.vector(table(factor(x>= cgd0$futime, c(FALSE, TRUE)))))
+> 
+> all(tcount[1:7, c("within", "trailing")] == t(counts))
+[1] TRUE
+> 
+> 
 > proc.time()
    user  system elapsed 
-  1.352   0.072   1.419 
+  3.092   0.104   3.194 
